# Zeus-Risk-Engine

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: quality.yml
assets/samples/: historical-risk-demo.zeus.json  portfolio.csv  risk_portfolio.csv
docs/: glossary.md  product-vision.md  scope.md  use-cases.md
docs/architecture/: overview.md
docs/concepts/: basic-analytics.md  historical-expected-shortfall.md  historical-var.md
docs/decisions/: ADR-001-separation-of-ui-and-core.md  ADR-002-use-of-pyside6.md  ADR-003-decimal-and-portfolio-weights.md  ADR-004-historical-var-conventions.md  ADR-005-historical-expected-shortfall-conventions.md  ADR-006-initial-desktop-composition.md  ADR-007-versioned-project-json.md
docs/development/: roadmap.md
docs/models/: csv-portfolio-format.md  market-data.md  portfolio-domain.md  project-file.md  xlsx-portfolio-format.md
docs/tutorials/: first-desktop-workflow.md  save-and-reopen-project.md
src/zeus_risk/: __init__.py  __main__.py  cli.py
src/zeus_risk/app/: __init__.py  __main__.py  application.py  main_window.py  models.py  styles.py
src/zeus_risk/application/: __init__.py  portfolio_risk.py  project_workflow.py
src/zeus_risk/core/: __init__.py
src/zeus_risk/domain/: __init__.py  analytics.py  currency.py  enums.py  instrument.py  market_data.py  portfolio.py  position.py  project.py  risk.py  validation.py
src/zeus_risk/exceptions/: __init__.py  analytics.py  market_data.py  portfolio.py  project.py  risk.py
src/zeus_risk/importers/: __init__.py  csv_portfolio.py  models.py  tabular.py  xlsx_portfolio.py
src/zeus_risk/market_data/: __init__.py  alignment.py  cache.py  csv_provider.py  provider.py
src/zeus_risk/projects/: __init__.py  json_store.py
tests/fixtures/market_data/: valid_prices.csv
tests/fixtures/portfolios/: valid_portfolio.csv
tests/gui/: conftest.py  test_main_window.py  test_qt_models.py
tests/integration/: test_basic_analytics_pipeline.py  test_csv_portfolio_import.py  test_historical_expected_shortfall_pipeline.py  test_historical_var_pipeline.py  test_local_market_data_pipeline.py  test_module_entrypoint.py  test_project_round_trip.py  test_xlsx_portfolio_import.py
tests/regression/: test_basic_analytics_reference.py  test_historical_expected_shortfall_reference.py  test_historical_var_reference.py
tests/unit/: test_cli.py  test_package.py
tests/unit/application/: test_portfolio_risk.py  (+1 more)
(+38 files in other folders)
